--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "zetachain",
+  "author": "hananetwork",
   "devDependencies": {
     "@changesets/cli": "^2.23.1",
     "@ethersproject/abi": "^5.4.7",
@@ -15,6 +15,7 @@
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.1",
     "@types/inquirer": "^8.2.1",
+    "@types/lodash": "^4.17.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
